export enum MeasureUnit {
  PASCAL,
  BAR,
  CELSIUS,
  FAHRENHEIT,
  KELVIN,
  PERCENTAGE
}
